--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_C_COMPILER mpicc)
 
 find_package(BLAS REQUIRED)
 find_package(LAPACK REQUIRED)
-# find_package(OpenMP)
+find_package(OpenMP)
 
 add_executable(prr calcul_residu.c main.c projection.c prr.c resolution_sev.c retour_espace_depart.c tools.c)
 target_compile_options(prr PRIVATE -Wall -flto -g)
@@ -14,4 +14,4 @@ target_link_libraries(prr PRIVATE ${MPI_C_LIBRARIES})
 target_link_libraries(prr PRIVATE m) #math.h
 target_link_libraries(prr PRIVATE ${BLAS_LIBRARIES})
 target_link_libraries(prr PRIVATE ${LAPACK_LIBRARIES})
-# target_link_libraries(prr PRIVATE OpenMP::OpenMP_C)
+target_link_libraries(prr PRIVATE OpenMP::OpenMP_C)
