--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,15 @@ find_package(BLAS REQUIRED)
 find_package(LAPACK REQUIRED)
 find_package(OpenMP)
 
+set(FLAGS -Wall -flto -g)
+set(LIBS m ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES} OpenMP::OpenMP_C)
+
 add_executable(prr calcul_residu.c main.c projection.c prr.c resolution_sev.c retour_espace_depart.c tools.c)
-target_compile_options(prr PRIVATE -Wall -flto -g)
-target_link_libraries(prr PRIVATE ${MPI_C_LIBRARIES})
-target_link_libraries(prr PRIVATE m) #math.h
-target_link_libraries(prr PRIVATE ${BLAS_LIBRARIES})
-target_link_libraries(prr PRIVATE ${LAPACK_LIBRARIES})
-target_link_libraries(prr PRIVATE OpenMP::OpenMP_C)
+target_compile_options(prr PRIVATE ${FLAGS})
+target_link_libraries(prr PRIVATE ${LIBS})
+
+add_executable(prr_mpi calcul_residu.c main.c projection.c prr.c resolution_sev.c retour_espace_depart.c tools.c)
+target_compile_definitions(prr_mpi PRIVATE MULTIPRR)
+target_compile_options(prr_mpi PRIVATE ${FLAGS})
+target_link_libraries(prr_mpi PRIVATE ${LIBS})
+target_link_libraries(prr_mpi PRIVATE ${MPI_C_LIBRARIES})
