--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,11 +12,11 @@ set(CMAKE_CXX_FLAGS -Wall -flto -g)
 set(LIBS m ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES} OpenMP::OpenMP_C)
 
 add_executable(prr calcul_residu.c main.c projection.c prr.c resolution_sev.c retour_espace_depart.c tools.c)
-target_compile_options(prr PRIVATE ${CMAKE_C_FLAGS})
+target_compile_options(prr PRIVATE ${CMAKE_CXX_FLAGS})
 target_link_libraries(prr PRIVATE ${LIBS})
 
 add_executable(prr_mpi calcul_residu.c main.c projection.c prr.c resolution_sev.c retour_espace_depart.c tools.c)
 target_compile_definitions(prr_mpi PRIVATE MULTIPRR)
-target_compile_options(prr_mpi PRIVATE ${CMAKE_C_FLAGS})
+target_compile_options(prr_mpi PRIVATE ${CMAKE_CXX_FLAGS})
 target_link_libraries(prr_mpi PRIVATE ${LIBS})
 target_link_libraries(prr_mpi PRIVATE ${MPI_C_LIBRARIES})
