run_bench+run_config : meilleure gestion des arguments + on peut // avec icc

--- a/run_config.cfg
+++ b/run_config.cfg
@@ -1,5 +1,5 @@
-cc execution m max_it filename epsilon nb_rep freq
-gcc seq 5 0 matrices/mat7x7.txt 1e-2 3 100
-icc par 7 0 matrices/mat7x7.txt 1e-2 3 100
-gcc par 4 0 matrices/mat7x7.txt 1e-2 4 100
-#gcc seq 5 0 matrices/mat7x7.txt 1e-2 3 100
+#cc omp_thread mpi_node filename m epsilon nb_rep freq max_it
+icc 1 1 mat7x7.txt 2 1e-2 5 100 0
+gcc 2 2 mat7x7.txt 4 1e-2 4 100 0
+icc 3 1 mat7x7.txt 3 1e-2 6 100 0
+#gcc 1 1 mat7x7.txt 5 0 1e-2 3 100
