--- a/run_config.cfg
+++ b/run_config.cfg
@@ -1,5 +1,7 @@
 #cc mpi_node omp_thread filename m epsilon nb_rep freq max_it
 icc 1 1 mat7x7.txt 2 1e-2 5 100 0
-gcc 2 2 mat7x7.txt 4 1e-2 4 100 0
-icc 1 3 mat7x7.txt 3 1e-2 6 100 0
-#gcc 1 1 mat7x7.txt 5 0 1e-2 3 100
+# gcc 2 2 mat7x7.txt 4 1e-2 4 100 0
+icc 2 3 mat7x7.txt 3 1e-2 5 100 0
+icc 4 4 mat7x7.txt 3 1e-2 5 100 0
+# gcc 1 3 mat7x7.txt 4 1e-2 4 100 0
+
