--- a/run_config.cfg
+++ b/run_config.cfg
@@ -1,7 +1,12 @@
-#cc mpi_node omp_thread filename m epsilon nb_rep freq max_it
-icc 1 1 mat7x7.txt 2 1e-2 5 100 0
+#cc mpi omp filename m epsilon nb_rep freq max_it
+icc 1 1 bcsstm12.mtx 10 1e-2 200 100 500
+icc 1 16 bcsstm12.mtx 10 1e-2 200 100 500
+#icc 8 1 bcsstm12.mtx 10 1e-2 200 100 500
+icc 8 16 bcsstm12.mtx 10 1e-2 200 100 500
+
+#icc 1 1 mat7x7.txt 2 1e-2 5 100 0
 # gcc 2 2 mat7x7.txt 4 1e-2 4 100 0
-icc 2 3 mat7x7.txt 3 1e-2 5 100 0
-icc 4 4 mat7x7.txt 3 1e-2 5 100 0
+#icc 2 3 mat7x7.txt 3 1e-2 5 100 0
+#icc 4 4 mat7x7.txt 3 1e-2 5 100 0
 # gcc 1 3 mat7x7.txt 4 1e-2 4 100 0
 
