--- a/run_config.cfg
+++ b/run_config.cfg
@@ -1,8 +1,32 @@
 #cc mpi omp filename m epsilon nb_rep freq max_it
-icc 1 1 bcsstm12.mtx 10 1e-2 300 100 600
+#icc 8 16 bcsstm12.mtx 10 1e-2 900 100 600
+#icc 8 16 bcsstm12.mtx 20 1e-2 900 100 600
 #icc 1 16 bcsstm12.mtx 10 1e-2 1000 100 1000
-icc 1 8 bcsstm12.mtx 10 1e-2 1000 100 600
-icc 8 16 bcsstm12.mtx 10 1e-2 1000 100 600
+#icc 8 16 bcsstm12.mtx 10 1e-2 900 100 600
+
+
+#icc 1 1 mat200x200.txt 2 1e-1 900 100 3000
+#icc 1 8 mat200x200.txt 2 1e-1 900 100 3000
+#icc 8 16 mat200x200.txt 2 1e-1 900 100 3000
+
+#icc 1 1 bcsstm13.mtx 20 1e-3 300 100 600
+#icc 1 1 bcsstm13.mtx 20 1e-3 300 100 600
+#icc 1 1 bcsstm13.mtx 20 1e-3 300 100 600
+#icc 1 8 bcsstm13.mtx 20 1e-3 450 100 600
+#icc 1 8 bcsstm13.mtx 20 1e-3 450 100 600
+#icc 8 16 bcsstm13.mtx 20 1e-3 900 100 600
+
+
+#icc 4 1 bfw398b.mtx 50 1e-20 900 100 500
+#icc 4 2 bfw398b.mtx 50 1e-20 900 100 500
+#icc 4 4 bfw398b.mtx 50 1e-20 900 100 500
+#icc 4 6 bfw398b.mtx 50 1e-20 900 100 500
+#icc 4 8 bfw398b.mtx 50 1e-20 900 100 500
+#icc 4 10 bfw398b.mtx 50 1e-20 900 100 500
+icc 4 12 bfw398b.mtx 50 1e-20 900 100 500
+icc 4 12 bfw398b.mtx 50 1e-20 900 100 500
+#icc 4 14 bfw398b.mtx 50 1e-20 900 100 500
+#icc 4 16 bfw398b.mtx 50 1e-20 900 100 500
 
 #icc 1 1 mat7x7.txt 2 1e-2 5 100 0
 # gcc 2 2 mat7x7.txt 4 1e-2 4 100 0
